fix: adjust top position for Menu component on small screens

--- a/components/Landing/Menu/menu.module.scss
+++ b/components/Landing/Menu/menu.module.scss
@@ -72,6 +72,7 @@
       }
       @media (width<475px) {
         transform: scale(0.3);
+        top: 8%;
       }
       @media (width<360px) {
         transform: scale(0.25);
